--- a/src/components/1/Land1.scss
+++ b/src/components/1/Land1.scss
@@ -132,11 +132,12 @@
     font-family: 'Gotham Pro';
     font-style: normal;
     font-weight: 700;
-    font-size: 80px;
+    font-size: 90px;
     margin: 0;
     padding: 0 0 40px 0;
     line-height: 110%;
     z-index: 1;
+    width: 800px;
 }
 
 .content_info {
@@ -157,7 +158,7 @@
     flex-direction: column;
     width: 700px;
     // margin-right: -100px;
-    margin-left: 10vw;
+    margin-left: -5vw;
     scale: 0.7;
     z-index: 4;
     // background: rgba(112, 26, 199, 0.8);
