--- a/src/components/2/Land2.scss
+++ b/src/components/2/Land2.scss
@@ -298,6 +298,8 @@
     .content {
         padding: 0 3%;
         z-index: 0;
+        align-items: flex-start;
+        width: 100%;
     }
 
     .container {
